tests/integration/tests/basic_functionality/check_commands/CHECK-NOT/one_string/03-negative_match_regex/sample.itest
; RUN: cat %S/filecheck.input | (%FILECHECK_EXEC %S/filecheck.check 2>&1; test $? == 1;) | %FILECHECK_TESTER_EXEC %s
; CHECK: {{^.*}}FileCheck
; CHECK-NEXT: {{^.*}}filecheck.check:1:14: error: CHECK-NOT: excluded string found in input{{$}}
; TODO: Here we could do a better match.
; CHECK-NEXT: {{^; CHECK-NOT: ...h.l.o...$}}
; TODO: Real FileCheck ignores whitespaces even when regex is passed.
; TODO: The next step is to check the --strict-whitespace option.
; CHECK-NEXT: {{^ \^$}}
; CHECK-NEXT: {{^<stdin>:.*:.*: note: found here$}}
; CHECK-NEXT: {{^}}hello{{$}}
; CHECK-NEXT: {{^}}^~~~~{{$}}
; CHECK-EMPTY:
